'feat: fixed destination text'

--- a/travel/index.html
+++ b/travel/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="destinations__slide">
                         <img class="destinations__img" src="images/USA.jpg" alt="USA">
-                        <p class="destinations__text destinations__text-usa"><span>USA</span></p>
+                        <p class="destinations__text"><span>USA</span></p>
                     </div>
                 </div>
                 <div class="destinations__dots">
