feat: added slider buttons

--- a/travel/index.html
+++ b/travel/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="header">
             <div class="wrapper header__wrapper">
-                <span class="header__mobile-logo"> <img src="../images/logo.svg" alt=""></span>
+                <span class="header__mobile-logo"><object data="images/logo.svg" type="image/svg+xml"></object></span>
                 <a class="header__logo" href="#">Travel Portal</a>
                 <nav class="header__navigation">
                     <ul class="navigation">
@@ -38,8 +38,10 @@
                 <div class="header__button">
                     <button class="button">Login</button>
                 </div>
-                <span class="humburger">
-                    <span class="humburger__line"></span>
+                <span class="burger">
+                    <div class="burger-bar"></div>
+                    <div class="burger-bar"></div>
+                    <div class="burger-bar"></div>
                 </span>
             </div>
         </div>
@@ -70,7 +72,7 @@
                     <div class="steps__icons-inner steps__icons-middle">
                         <span class="steps__icons-square"><object data="images/calendar.svg"
                                 type="image/svg+xml"></object></span>
-                        <p  class="steps__text-mobile steps__text-middle">Share us preferable dates </p>
+                        <p class="steps__text-mobile steps__text-middle">Share us preferable dates </p>
                     </div>
                     <div class="steps__icons-inner  steps__icons-last">
                         <span class="steps__icons-square"><object data="images/plane.svg"
@@ -98,17 +100,24 @@
                     </div>
                 </div>
                 <div class="destinations__slider-mobile">
+                    <img class="destinations__arrow-left" src="images/vector-left.svg" alt="arrow-left">
+                    <img class="destinations__arrow-right" src="images/Vector-right.svg" alt="arrow-right">
                     <div class="destinations__slide-mobile">
-                        <img  class="destinations__img-mobile" src="images/island-mobile.jpg" alt="Spain">
+                        <img class="destinations__img-mobile" src="images/island-mobile.jpg" alt="Spain">
                         <p class="destinations__text-mobile"><span>Spain</span></p>
                     </div>
                     <div class="destinations__slide-mobile">
-                        <img  class="destinations__img-mobile" src="images/japan-mobile.jpg" alt="Japan">
-                        <p class="destinations__text-mobile"><span>Japan</span></p>
+                        <img class="destinations__img-mobile" src="images/japan-mobile.jpg" alt="Japan">
+                        <!-- <p class="destinations__text-mobile"><span>Japan</span></p> -->
                     </div>
                     <div class="destinations__slide-mobile">
-                        <img  class="destinations__img-mobile" src="images/usa-mobile.jpg" alt="USA">
-                        <p class="destinations__text-mobile"><span>USA</span></p>
+                        <img class="destinations__img-mobile" src="images/usa-mobile.jpg" alt="USA">
+                        <!-- <p class="destinations__text-mobile"><span>USA</span></p> -->
+                    </div>
+                    <div class="destinations__dots-mobile">
+                        <button class="dot dot--active"></button>
+                        <button class="dot"></button>
+                        <button class="dot"></button>
                     </div>
                 </div>
                 <div class="destinations__dots">
@@ -130,7 +139,8 @@
                             <img class="stories__img" src="images/thailand.jpg" alt="Thailand">
                             <div class="stories__inner__content">
                                 <h3>10 Photos of Attractive Thailand</h3>
-                                <p class="stories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                <p class="stories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor
                                     incididunt
                                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                     ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -139,9 +149,13 @@
                                     sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
                                     id
                                     est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                     <p class="stories__mobile-text">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.Lorem ipsum dolor sit a...
-                                     </p>
+                                <p class="stories__mobile-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                    nulla.Lorem ipsum dolor sit a...
+                                </p>
                                 <a class="stories__link" href="#">Read More</a>
                             </div>
                         </div>
@@ -149,7 +163,8 @@
                             <img class="stories__img" src="images/utah.jpg" alt="Utah">
                             <div class="stories__inner__content">
                                 <h3>Canyonlands National Park, Utah</h3>
-                                <p class="stories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                <p class="stories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor
                                     incididunt
                                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                     ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -158,9 +173,13 @@
                                     sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
                                     id
                                     est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                     <p class="stories__mobile-text">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.Lorem ipsum dolor sit a...
-                                     </p>
+                                <p class="stories__mobile-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                    nulla.Lorem ipsum dolor sit a...
+                                </p>
                                 <a class="stories__link" href="#">Read More</a>
                             </div>
                         </div>
@@ -168,7 +187,8 @@
                             <img class="stories__img" src="images/mountains.jpg" alt="Mountains">
                             <div class="stories__inner__content">
                                 <h3>I left my heart in the Mountains!</h3>
-                                <p  class="stories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                <p class="stories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor
                                     incididunt
                                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                     ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -177,9 +197,13 @@
                                     sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
                                     id
                                     est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                     <p class="stories__mobile-text">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.Lorem ipsum dolor sit a...
-                                     </p>
+                                <p class="stories__mobile-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                    nulla.Lorem ipsum dolor sit a...
+                                </p>
                                 <a class="stories__link" href="#">Read More</a>
                             </div>
                         </div>
@@ -187,7 +211,8 @@
                             <img class="stories__img" src="images/canyon.jpg" alt="Canyon">
                             <div class="stories__inner__content">
                                 <h3>The Longest journey in my life!</h3>
-                                <p  class="stories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                <p class="stories__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                                    eiusmod tempor
                                     incididunt
                                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
                                     ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
@@ -196,9 +221,13 @@
                                     sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
                                     id
                                     est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-                                    <p class="stories__mobile-text">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.Lorem ipsum dolor sit a...
-                                     </p>
+                                <p class="stories__mobile-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                                    irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                                    nulla.Lorem ipsum dolor sit a...
+                                </p>
                                 <a class="stories__link" href="#">Read More</a>
                             </div>
                         </div>
