feat: added dots to mobile in stories

--- a/travel/index.html
+++ b/travel/index.html
@@ -115,9 +115,9 @@
                         <!-- <p class="destinations__text-mobile"><span>USA</span></p> -->
                     </div>
                     <div class="destinations__dots-mobile">
-                        <button class="dot dot--active"></button>
-                        <button class="dot"></button>
-                        <button class="dot"></button>
+                        <button class="dot-mobile dot-mobile--active"></button>
+                        <button class="dot-mobile"></button>
+                        <button class="dot-mobile"></button>
                     </div>
                 </div>
                 <div class="destinations__dots">
