feat:added some changes

--- a/travel/index.html
+++ b/travel/index.html
@@ -27,22 +27,20 @@
             <div class="wrapper header__wrapper">
                 <span class="header__mobile-logo"><object data="images/logo.svg" type="image/svg+xml"></object></span>
                 <a class="header__logo" href="#">Travel Portal</a>
+                 <div class="burger"> <span></span></div>
                 <nav class="header__navigation">
                     <ul class="navigation">
                         <li><a class="navigation__link" href="#preview">How It Works</a></li>
                         <li><a class="navigation__link" href="#steps">Plan Your Trip</a></li>
                         <li><a class="navigation__link" href="#destinations">Destinations</a></li>
                         <li><a class="navigation__link" href="#stories">Travel Stories</a></li>
+                         <li><a class="navigation__link link-mobile" href="#destinations">Account</a></li>
+                        <li><a class="navigation__link link-mobile" href="#stories">Social Media</a></li>
                     </ul>
                 </nav>
                 <div class="header__button">
                     <button class="button">Login</button>
                 </div>
-                <span class="burger">
-                    <div class="burger-bar"></div>
-                    <div class="burger-bar"></div>
-                    <div class="burger-bar"></div>
-                </span>
             </div>
         </div>
         <section class="preview" id="preview">
