feat:added burger menu

--- a/travel/index.html
+++ b/travel/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+     <div class="block-page"></div>
     <header>
         <div class="header">
             <div class="wrapper header__wrapper">
@@ -34,8 +35,8 @@
                         <li><a class="navigation__link" href="#steps">Plan Your Trip</a></li>
                         <li><a class="navigation__link" href="#destinations">Destinations</a></li>
                         <li><a class="navigation__link" href="#stories">Travel Stories</a></li>
-                         <li><a class="navigation__link link-mobile" href="#destinations">Account</a></li>
-                        <li><a class="navigation__link link-mobile" href="#stories">Social Media</a></li>
+                         <li><a class="navigation__link link-mobile" href="#">Account</a></li>
+                        <li><a class="navigation__link link-mobile" href="#">Social Media</a></li>
                     </ul>
                 </nav>
                 <div class="header__button">
