--- a/travel/index.html
+++ b/travel/index.html
@@ -63,7 +63,7 @@
             <div class="wrapper steps__wrapper">
                 <h2 class="steps__title">3 steps to the perfect trip</h2>
                 <div class="steps__icons">
-                    <div class="steps__icons-inner">
+                    <div class="steps__icons-inner steps__icons-first">
                         <span class="steps__icons-square"><object data="images/bicycle.svg"
                                 type="image/svg+xml"></object></span>
                         <p class="steps__text-mobile steps__text-first ">Tell us what you want to do</p>
@@ -114,7 +114,7 @@
                         <!-- <p class="destinations__text-mobile"><span>USA</span></p> -->
                     </div>
                     <div class="destinations__dots-mobile">
-                        <button class="dot-mobile dot-mobile--active"></button>
+                        <button class=" dot-mobile--active dot-mobile "></button>
                         <button class="dot-mobile"></button>
                         <button class="dot-mobile"></button>
                     </div>
