feat: added id to footer

--- a/travel/index.html
+++ b/travel/index.html
@@ -36,7 +36,7 @@
                         <li><a class="navigation__link" href="#destinations">Destinations</a></li>
                         <li><a class="navigation__link" href="#stories">Travel Stories</a></li>
                          <li><a class="navigation__link link-mobile" href="#">Account</a></li>
-                        <li><a class="navigation__link link-mobile" href="#">Social Media</a></li>
+                        <li><a class="navigation__link link-mobile" href="#social">Social Media</a></li>
                     </ul>
                 </nav>
                 <div class="header__button">
@@ -240,7 +240,7 @@
     </main>
     <footer>
         <div class="wrapper footer__wrapper">
-            <div class="footer">
+            <div class="footer" id="social">
                 <p class="footer__text">All Rights Reserved © Travel Portal</p>
                 <ul class="footer__icons">
                     <li> <a class="social-icons" href="https://github.com/Altynay88"><img src="images/insta.svg"
